# fuu

./: .gitignore  Cargo.toml  LICENSE  README.md
iced/: Cargo.toml
iced/src/: main.rs
iced/src/gui/components/: icons.rs  image_preview.rs  mod.rs  welcome_page.rs
iced/src/gui/types/: mod.rs
iced/src/gui/widgets/: modal.rs
opengl/: main.zig
src/: app.rs  image.rs  main.rs  scenes.rs  state.rs  themes.rs  utils.rs
src/gui/: fuu.rs  mod.rs  style.rs
src/gui/components/: errors.rs  icons.rs  image_preview.rs  loading_page.rs  mod.rs  welcome_page.rs
src/gui/types/: image_types.rs  page.rs
vello/src/: image.rs  themes.rs  utils.rs
