[package]
name = "fuu"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
iced = { git = "https://github.com/iced-rs/iced/", features = ["image", "tokio"] }
image = "0.24.6"
infer = { version = "0.15.0", default-features = false }
md-5 = "0.10.5"
once_cell = "1.18.0"
tokio = { version = "1.29.1", features = ["fs", "io-util"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = "s"
