[package]
name = "fuu"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1"
bytes = "1"
dirs = "5.0.1"
iced = { git = "https://github.com/iced-rs/iced/", features = ["image", "tokio", "advanced"] }
image = "0.24.6"
infer = { version = "0.15.0", default-features = false }
md-5 = "0.10.5"
reqwest = "0.11.18"
tokio = { version = "1", features = ["fs", "io-util"] }
url = "2.4.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = "s"
