[package]
name = "fuu"
version = "0.1.0"
edition = "2021"

[dependencies]
vello = { version = "0.1.0" }
anyhow = "1.0.80"
pollster = "0.3.0"
wgpu = "0.19.3"
winit = "0.29.12"
image = "0.25.0"
rayon = "1.10.0"
infer = { version = "0.15.0", default-features = false }
parking_lot = { version = "0.12.1", features = ["send_guard"] }
hashbrown = { version = "0.14.3", features = ["rayon"] }
once_cell = { version = "1.19.0", features = ["parking_lot"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
